<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/r_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/bt_new_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_task"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/bt_progress_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progress_task"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/bt_done_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done_task"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/bt_all_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_task"
            android:textSize="14sp" />

    </RadioGroup>

</LinearLayout>