<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/tv_task_w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/task"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv_status_w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_task_w"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/status"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

</RelativeLayout>