<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="greenrabbit.tasktracker.AddView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task" />

        <EditText
            android:id="@+id/et_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/statuslist"
            android:spinnerMode="dialog"/>

        <Button
            android:id="@+id/bt_add_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task" />
    </LinearLayout>

</RelativeLayout>
